<resources>
    <string name="app_name">让体重飞</string>

    <string name="title_task">今日任务</string>
    <string name="title_week">本周</string>
    <string name="title_month">本月</string>
    <string name="title_history">瘦身记录</string>
    <string name="title_tips">小知识</string>

    <string name="navigation_drawer_open">打开抽屉</string>
    <string name="navigation_drawer_close">关闭抽屉</string>

    <string name="your_name">你的名字</string>
    <string name="action_settings">设置</string>
    <string name="your_age">你的年龄</string>
    <string name="your_weight">原体重</string>
    <string name="your_target">目标体重</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="config_user_title">让我们来计划一下吧</string>
    <string name="title_activity_test">test</string>
    <string name="share_title">分享</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_settings">设置</string>
    <string name="title_activity_config_user_info">让我们先来计划一下吧</string>
    <string name="hello_world">Hello world!</string>
    <string name="next">下一步</string>
    <string name="first_running_pg1">欢迎使用\n<b>让体重飞1.0</b>\n让我们开始吧。。。。</string>
    <string name="last">上一步</string>
    <string name="done">完成</string>
    <string name="warning">请正确填写！</string>
    <string name="date_select_title">您计划在哪天完成您的减肥计划？</string>
    <string name="name_error">长度要大于2位</string>
    <string name="age_error">大于8岁小于90岁</string>
    <string name="weight_error">大于25.0kg</string>
    <string name="target_error">大于25.0kg小于您的体重</string>
    <string name="config_userinfo_title">让我来了解下您吧。</string>
    <string name="title_more">更早</string>
    <string name="back_button_label">Back</string>
    <string name="skip_button_label">Skip</string>
    <string name="next_button_label">Next</string>
    <string name="settings_title_userinfo">个人信息</string>
    <string name="author">imxqd</string>
    <string name="weight_current">当前体重：</string>
    <string name="weight_reduced">已减体重：</string>
    <string name="resize_done">完成</string>
    <string name="resize_doing">正在转换图片</string>
    <string name="appdir">/Android/data/cf.imxqd.LetWeightFly</string>
    <string name="datadir">/data/cf.imxqd.LetWeightFly</string>
    <string name="exit_by_2_click">再按一次退出程序</string>
    <string name="ysjf">饮食减肥</string>
    <string name="yycs">营养常识</string>
    <string name="ydjf">运动减肥</string>
    <string name="jfqm">减肥窍门</string>
    <string name="amdx">按摩点穴</string>
    <string name="zjjf">专家减肥</string>
    <string name="title_activity_web_view">WebViewActivity</string>
    <string name="load">请稍后</string>
    <string name="can_display_img">显示图片</string>
    <string name="tips_src">资讯源</string>
    <string name="title_software_info">软件信息</string>
    <string name="title_legal_informatics">法律信息</string>
    <string name="can_display_img_summary">关闭后可节省流量</string>
    <string name="title_author">软件作者</string>
    <string name="title_verson">版本号</string>
    <string name="verson">1.0.0</string>
    <string name="title_disclaimer">免责声明</string>
    <string name="title_copyright">版权声明</string>
    <string name="tips_src_summary">选择小知识的资讯源站</string>
    <string name="can_share">分享功能</string>
    <string name="can_share_summary">是否打开小知识内容页面的分享功能</string>
    <string name="internet_error">网络异常!</string>
    <string name="can_share_summary_on">已允许</string>
    <string name="can_share_summary_off">不允许</string>
    <string name="can_display_summary_on">允许显示图片</string>
    <string name="can_display_summary_off">不允许显示图片</string>
    <string name="action_search">搜索</string>
    <string name="search_hint">搜索各种食物与运动</string>
    <string name="title_activity_search">搜索</string>
    <string name="pull_down_to">请下拉刷新重试</string>
    <string name="sport">运动</string>
    <string name="food">食物</string>
    <string name="eating">饮食</string>
    <string name="weight">体重</string>
    <string name="advantages">好处</string>
    <string name="disadvantages">坏处</string>
    <string name="walk">走路</string>
    <string name="running">跑步</string>
    <string name="skipping">跳绳</string>
    <string name="aerobics">健美操</string>
    <string name="composition">营养成分表</string>
    <string name="title_activity_search_detail">SearchDetail</string>
    <string name="add_to_task">添加</string>
    <string name="add_to_lib">添加到库</string>
    <string name="today_walk_step">今日步行：</string>
    <string name="today_walk_step2">步，消耗了</string>
    <string name="today_walk_step3_apple">个苹果</string>
    <string name="today_walk_step3_chicken">个鸡腿</string>
    <string name="today_walk_step3_cola">杯可乐</string>
    <string name="today_walk_step3_scallion">根大葱</string>
    <string name="today_walk_step3_banana">根香蕉</string>
    <string name="today_walk_step3_corn">根玉米</string>
    <string name="today_walk_step3_egg">个鸡蛋</string>
    <string name="my_lib">我的库</string>
    <string name="find_more">没找到? 试试更多...</string>
</resources>
