<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:baselineAligned="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <LinearLayout
        android:baselineAligned="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            >
            <TextView
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@color/green"
                android:text="@string/advantages"
                android:textColor="@color/white"/>
            <TextView
                android:gravity="center"
                android:id="@+id/advantages"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="xxooxxooxxooxxooxxoo" />
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent">
            <TextView
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@color/red"
                android:text="@string/disadvantages"
                android:textColor="@color/white"/>
            <TextView
                android:gravity="center"
                android:id="@+id/disadvantages"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="xxooxxooxxooxxooxxoo" />
        </LinearLayout>

    </LinearLayout>



    <TextView
        android:id="@+id/food_to_sport_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:text="总卡路里：11212"/>
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bluegrey"
        android:layout_gravity="center_horizontal">
        <TableRow
            android:background="@color/teal">
            <TextView
                android:layout_height="45dp"
                android:gravity="center"
                android:text="@string/walk"
                android:textColor="@color/white"
                android:layout_weight="1"
                android:layout_column="1"/>
            <TextView
                android:layout_height="45dp"
                android:gravity="center"
                android:textColor="@color/white"
                android:id="@+id/walk"
                android:text="2323"
                android:layout_weight="1"
                android:layout_column="2"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_height="45dp"
                android:gravity="center"
                android:text="@string/running"
                android:textColor="@color/white"
                android:layout_weight="1"
                android:layout_column="1"/>
            <TextView
                android:layout_height="45dp"
                android:gravity="center"
                android:id="@+id/running"
                android:text="21323"
                android:textColor="@color/white"
                android:layout_weight="1"
                android:layout_column="2"/>
        </TableRow>
        <TableRow
            android:background="@color/teal">
            <TextView
                android:layout_height="45dp"
                android:gravity="center"
                android:text="@string/skipping"
                android:textColor="@color/white"
                android:layout_weight="1"
                android:layout_column="1"/>
            <TextView
                android:layout_height="45dp"
                android:gravity="center"
                android:text="2323"
                android:id="@+id/skipping"
                android:textColor="@color/white"
                android:layout_weight="1"
                android:layout_column="2"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_height="45dp"
                android:gravity="center"
                android:text="@string/aerobics"
                android:textColor="@color/white"
                android:layout_weight="1"
                android:layout_column="1"/>
            <TextView
                android:layout_height="45dp"
                android:gravity="center"
                android:text="2323"
                android:id="@+id/aerobics"
                android:textColor="@color/white"
                android:layout_weight="1"
                android:layout_column="2"/>
        </TableRow>
    </TableLayout>
    <TextView
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:text="@string/composition"/>
    <TableLayout
        android:id="@+id/composition"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </TableLayout>
    </LinearLayout>
    </ScrollView>
</LinearLayout>