<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="cf.imxqd.LetWeightFly.Fragments.config_page_one"
    android:id="@+id/config_root"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@color/green_pressed"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:text="@string/config_userinfo_title"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="42dp"
            android:paddingLeft="8dp"
            android:text="@string/your_name"
            android:textColor="@color/white"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:padding="8dp"
            android:id="@+id/name"
            android:maxLength="8"
            android:focusable="true"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:singleLine="true"
            android:textCursorDrawable="@null"
            android:imeOptions="actionNext"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="8dp"
            android:text="@string/your_age"
            android:textColor="@color/white"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:padding="8dp"
            android:id="@+id/age"
            android:numeric="integer"
            android:maxLength="2"
            android:focusable="true"
            android:singleLine="true"
            android:textCursorDrawable="@null"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:imeOptions="actionNext"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="8dp"
            android:text="@string/your_weight"
            android:textColor="@color/white"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:padding="8dp"
            android:id="@+id/weight"
            android:numeric="decimal"
            android:maxLength="4"
            android:focusable="true"
            android:textCursorDrawable="@null"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:imeOptions="actionNext"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="8dp"
            android:text="@string/your_target"
            android:textColor="@color/white"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:padding="8dp"
            android:id="@+id/target"
            android:numeric="decimal"
            android:maxLength="4"
            android:focusable="true"
            android:textCursorDrawable="@null"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:imeOptions="actionDone"/>
    </LinearLayout>

</LinearLayout>
