<FrameLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cf.imxqd.LetWeightFly.Fragments.TodayTaskFragment">
    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/listview"
        android:scrollbars="none"
        android:divider="@null"
        android:dividerHeight="0dp"
        />
    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/menu"
        android:layout_gravity="bottom|end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        fab:menu_labels_showAnimation="@anim/jump_from_down"
        fab:menu_labels_hideAnimation="@anim/jump_to_down"
        fab:menu_colorNormal="@color/colorPrimary"
        fab:menu_colorPressed="@color/colorPrimaryPressed">

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/menu_sport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_size="mini"
            fab:fab_colorNormal="@color/orange"
            fab:fab_colorPressed="@color/orange_pressed"
            android:src="@drawable/ic_sport"
            fab:fab_label="@string/sport" />
        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/menu_food"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_size="mini"
            fab:fab_colorNormal="@color/green"
            fab:fab_colorPressed="@color/green_pressed"
            android:src="@drawable/ic_food"
            fab:fab_label="@string/eating" />
        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/menu_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_weight"
            fab:fab_size="mini"
            fab:fab_label="@string/weight" />

    </com.github.clans.fab.FloatingActionMenu>
</FrameLayout>
