<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:shadow="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="300dp"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/header_background"
    >
    <app.mosn.zdepthshadowlayout.ZDepthShadowLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/image"
        android:layout_centerHorizontal="true"
        shadow:z_depth="z_depth3"
        shadow:z_depth_shape="oval"
        shadow:z_depth_paddingTop="z_depth0"
        shadow:z_depth_paddingLeft="z_depth3"
        shadow:z_depth_paddingRight="z_depth3"
        shadow:z_depth_paddingBottom="z_depth3"
        >
        <cf.imxqd.LetWeightFly.Views.CircleImageView
            android:id="@+id/nav_image"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:clickable="true"
            />
    </app.mosn.zdepthshadowlayout.ZDepthShadowLayout>

    <TextView
        android:id="@+id/name"
        android:layout_marginTop="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/image"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"
        android:textSize="23sp"
        android:text="@string/author"
        />
    <TextView
        android:id="@+id/weight_current"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/name"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:textColor="@color/white"
        android:text="@string/weight_current"/>
    <TextView
        android:id="@+id/weight_reduced"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/name"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="16dp"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="20dp"
        android:textColor="@color/white"
        android:text="@string/weight_reduced"/>


</RelativeLayout>
